--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 #home{
-  background-image: url("/images/bg1new.jpg");
+  background-image: url("bg1new.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -137,7 +137,7 @@
   content: "";
   width: 100%;
   height: 25rem;
-  background-image: url(../images/bg\ clients.jpg);
+  background-image: url(bg\ clients.jpg);
   background-size: cover;
   opacity: 0.5;
   /* border: 2px solid blue; */
@@ -147,7 +147,7 @@
 
 /* contact us section  and input form */
 #contact{
-  background-image: url(../images/contact.jpg);
+  background-image: url(contact.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -170,6 +170,9 @@
   width: 30%;    
 }
 
+#contact button{
+  margin-bottom: 1rem;
+}
 /* copyrights  */
 #copyrights{
   background-color: #43f1b7;
